--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,9 @@
                 "!",
                 "whisper",
                 "!",
-                "fdsink"
+                "textrender",
+                "!",
+                "autovideosink"
             ],
             "cwd": "${workspaceFolder}",
             "env": {
