--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,8 @@
                 "!",
                 "textrender",
                 "!",
+                "videoconvert",
+                "!",
                 "autovideosink"
             ],
             "cwd": "${workspaceFolder}",
