--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,8 @@
                 "!",
                 "decodebin",
                 "!",
+                "audiobuffersplit",
+                "!",
                 "audioconvert",
                 "!",
                 "queue",
