--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,6 +44,8 @@
                 "!",
                 "audioconvert",
                 "!",
+                "audioresample",
+                "!",
                 "autoaudiosink"
             ],
             "cwd": "${workspaceFolder}",
