enhance debug message.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,42 +11,30 @@
                 "location=../whisper.cpp/samples/jfk.wav",
                 "!",
                 "decodebin",
+                //"osxaudiosrc",
+                //"device=107",
+                //"do-timestamp=true",
                 "!",
-                "tee",
-                "name=t",
+                "audioconvert",
+                "!",
+                "audioresample",
+                "!",
+                "audio/x-raw,format=S16LE,channels=1,rate=16000,layout=non-interleaved",
                 "!",
                 "queue",
                 "max-size-time=0",
                 "max-size-bytes=0",
                 "max-size-buffers=0",
                 "!",
-                "audioconvert",
-                "!",
-                "audiobuffersplit",
-                "!",
-                "audioconvert",
-                "!",
-                "audioresample",
-                "!",
                 "whisper",
+                "language=en",
+                "pts-offset-ms=1000",
                 "!",
                 "textrender",
                 "!",
                 "videoconvert",
                 "!",
                 "osxvideosink",
-                "t.",
-                "!",
-                "queue",
-                "max-size-time=0",
-                "max-size-bytes=0",
-                "max-size-buffers=0",
-                "!",
-                "audioconvert",
-                "!",
-                "audioresample",
-                "!",
-                "autoaudiosink"
             ],
             "cwd": "${workspaceFolder}",
             "env": {
