--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,52 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug 'gstwhisper'",
+            "name": "Debug 'gstwhisper' using file source",
             "program": "gst-launch-1.0",
             "args": [
                 "filesrc",
                 "location=../whisper.cpp/samples/jfk.wav",
                 "!",
                 "decodebin",
-                //"osxaudiosrc",
-                //"device=107",
-                //"do-timestamp=true",
+                "!",
+                "audioconvert",
+                "!",
+                "audioresample",
+                "!",
+                "audio/x-raw,format=S16LE,channels=1,rate=16000,layout=non-interleaved",
+                "!",
+                "queue",
+                "max-size-time=0",
+                "max-size-bytes=0",
+                "max-size-buffers=0",
+                "!",
+                "whisper",
+                "language=en",
+                "pts-offset-ms=1000",
+                "!",
+                "textrender",
+                "!",
+                "videoconvert",
+                "!",
+                "osxvideosink",
+            ],
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "GST_PLUGIN_PATH": "${workspaceFolder}/target/x86_64-apple-darwin/debug",
+                "WHISPER_MODEL_PATH": "${workspaceFolder}/../whisper.cpp/models/ggml-base.en.bin",
+                "GST_DEBUG": "2,whisper:4",
+                "GST_DEBUG_DUMP_DOT_DIR": "/tmp/"
+            }
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug 'gstwhisper' using microphone",
+            "program": "gst-launch-1.0",
+            "args": [
+                "osxaudiosrc",
+                "device=107",
+                "do-timestamp=true",
                 "!",
                 "audioconvert",
                 "!",
