--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,7 +49,13 @@
             "args": [
                 "osxaudiosrc",
                 "device=107",
-                "do-timestamp=true",
+                "!",
+                "audioconvert",
+                "!",
+                "audioresample",
+                "!",
+                "audiornnoise",
+                "voice-activity-threshold=0.1",
                 "!",
                 "audioconvert",
                 "!",
@@ -64,7 +70,8 @@
                 "!",
                 "whisper",
                 "language=en",
-                "pts-offset-ms=1000",
+                "do-timestamp=true",
+                "pts-offset-ms=500",
                 "!",
                 "textrender",
                 "!",
