--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,26 +12,39 @@
                 "!",
                 "decodebin",
                 "!",
-                "audioconvert",
-                "!",
-                "audioresample",
-                "!",
-                "audio/x-raw,format=S16LE,channels=1,rate=16000,layout=non-interleaved",
+                "tee",
+                "name=t",
                 "!",
                 "queue",
                 "max-size-time=0",
                 "max-size-bytes=0",
                 "max-size-buffers=0",
                 "!",
+                "audioconvert",
+                "!",
+                "audioresample",
+                "!",
+                "audio/x-raw,format=S16LE,channels=1,rate=16000,layout=non-interleaved",
+                "!",
                 "whisper",
                 "language=en",
-                "pts-offset-ms=1000",
+                "pts-offset-ms=0",
                 "!",
                 "textrender",
                 "!",
                 "videoconvert",
                 "!",
                 "osxvideosink",
+                "t.",
+                "!",
+                "queue",
+                "max-size-time=0",
+                "max-size-bytes=0",
+                "max-size-buffers=0",
+                "!",
+                "audioconvert",
+                "!",
+                "autoaudiosink"
             ],
             "cwd": "${workspaceFolder}",
             "env": {
