--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,36 @@
                 "!",
                 "tee",
                 "name=t",
+                "t.",
+                "!",
+                "queue",
+                "max-size-time=0",
+                "max-size-bytes=0",
+                "max-size-buffers=0",
+                "!",
+                "audioconvert",
+                "!",
+                "autoaudiosink",
+                "t.",
+                "!",
+                "queue",
+                "max-size-time=0",
+                "max-size-bytes=0",
+                "max-size-buffers=0",
+                "!",
+                "audioconvert",
+                "!",
+                "wavescope",
+                "!",
+                "video/x-raw,width=960,height=540",
+                "!",
+                "textoverlay",
+                "name=o",
+                "!",
+                "videoconvert",
+                "!",
+                "osxvideosink",
+                "t.",
                 "!",
                 "queue",
                 "max-size-time=0",
@@ -30,21 +60,7 @@
                 "language=en",
                 "pts-offset-ms=0",
                 "!",
-                "textrender",
-                "!",
-                "videoconvert",
-                "!",
-                "osxvideosink",
-                "t.",
-                "!",
-                "queue",
-                "max-size-time=0",
-                "max-size-bytes=0",
-                "max-size-buffers=0",
-                "!",
-                "audioconvert",
-                "!",
-                "autoaudiosink"
+                "o.",
             ],
             "cwd": "${workspaceFolder}",
             "env": {
