--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -84,7 +84,7 @@
                 "audioresample",
                 "!",
                 "audiornnoise",
-                "voice-activity-threshold=0.1",
+                "voice-activity-threshold=0.5",
                 "!",
                 "audioconvert",
                 "!",
@@ -103,6 +103,9 @@
                 "pts-offset-ms=500",
                 "!",
                 "textrender",
+                "font-desc=Sans, 18",
+                "!",
+                "video/x-raw,width=960,height=540",
                 "!",
                 "videoconvert",
                 "!",
