--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -54,7 +54,12 @@
                 "!",
                 "audioresample",
                 "!",
-                "audio/x-raw,format=S16LE,channels=1,rate=16000,layout=non-interleaved",
+                "audio/x-raw,format=S16LE,channels=1,rate=16000",
+                "!",
+                "audiobuffersplit",
+                "output-buffer-duration=1/100",
+                "!",
+                "audioconvert",
                 "!",
                 "whisper",
                 "language=en",
